# DCA

./: .clang-format  .dir-locals.el  .gitignore  ATTRIBUTIONS.md  CITATION.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  CTestConfig.cmake  HEADER.TXT  LICENSE  README.md  TODO.txt  dca_hip.cmake
applications/: CMakeLists.txt  lattice_types.hpp  model_type.hpp  rng_type.inc  type_definitions.h  type_definitions.h.in
applications/analysis/: CMakeLists.txt  chi_q_omega.cpp  include_files.h.in  include_files.inc.in  main_analysis.cpp  main_analysis.cpp.in  rng_type.inc
applications/analysis/test/: CMakeLists.txt  analysis_DCA+_mpi_test.cpp  include_files.h  input.analysis_DCA+_mpi_test.json  input_data.analysis_DCA+_mpi_test.hdf5  rng_type.inc  type_definitions.h
applications/cluster_solver_check/: CMakeLists.txt  cluster_solver_check.cpp  cluster_solver_check.cpp.in  include_files.h.in  include_files.inc.in
applications/cluster_solver_check/test/: CMakeLists.txt
applications/dca/: CMakeLists.txt  include_files.h.in  include_files.inc.in  main_dca.cpp  main_dca.cpp.in
applications/dca/test/: CMakeLists.txt  check_data.dca_sp_DCA+_mpi_test.hdf5  check_data.dca_sp_DCA+_pthread_test.hdf5  custom_type_definitions.inc  dca_sp_DCA+_mpi_cuda_test.cpp  dca_sp_DCA+_mpi_test.cpp  dca_sp_DCA+_pthread_test.cpp  include_files.h  include_files.inc  input.dca_sp_DCA+_mpi_test.json  input.dca_sp_DCA+_pthread_test.json  input.dca_tp_DCA+_mpi_test.json  rng_type.inc  type_definitions.h
applications/lattice_models/: tight_binding_on_2D_square_lattice.hpp
applications/scaling/: generate_scaling_run.py  input.json.in  summit_scaling.job.in  titan_scaling.job.in
examples/check_solver/: CMakeLists.txt  check_solver.cpp
examples/dca/: CMakeLists.txt  main_dca.cpp.in
gitVersion/: CMakeLists.txt  gitVersion.cpp.in  gitVersion.hpp
libs/simplex_gm_rule/: CMakeLists.txt  simplex_gm_rule.cpp
modules/: CMakeLists.txt  modules.cpp.in  modules.hpp
src/: CMakeLists.txt  enumerations.hpp
src/DCA_GPU_routines/: CMakeLists.txt  DCA_GPU_routines.cu
src/LAPACK_PLANS/: include_blas_lapack_plans.h  include_blas_lapack_plans.h~  include_cublas.h  include_cublas.h~
src/LAPACK_PLANS/BLAS/: BLAS_C_wrappers.h  blas_gemm.h  blas_gemm.h~  gemv_plan.h
src/LAPACK_PLANS/BLAS_BLOCK_MATRICES/: block_geev_plan.h  block_gemv_plan.h
src/LAPACK_PLANS/CUBLAS/: allocate_deallocate_cublas.h~
src/LAPACK_PLANS/LAPACK/: LAPACK_C_wrappers.h  geev_plan.h  geinv_plan.h  gelss_plan.h  gesv_plan.h  gesvd_plan.h~  getrf_plan.h~
src/LAPACK_PLANS/LINEAR_ALGEBRA_PLANS/: copy_plan.h  scale_plan.h  scale_plan.h~  swap_plan.h
src/LAPACK_PLANS/MAGMA/: magma_getrs.h~
src/LAPACK_PLANS/OLD/: LU_solve_plan.h  banded_matrix_vector_multiplication.h  dot_product_plan.h  eigensystem_plan.h  include_LAPACK_plans.h  invert_plan.h  least_square_fit.h  solve_plan.h  test_invert_plan.h  triangular_solve_plan.h
src/comp_library/: include_computational_library.h  include_computational_library.h~
src/comp_library/IO_library/: IO.hpp  IO_types.h  include_IO_operations.h  template_reader.h  template_writer.h
src/comp_library/LIN_ALG/: basic_cublas_functions.h  basic_cublas_functions_old.h  basic_cuda_functions.h  include_linalg.cu.h  include_linalg.h  include_linalg.h~
src/comp_library/blas_lapack_plans/: blas_lapack_plans.hpp  linear_algebra_library.hpp  matrix_form.hpp
src/comp_library/function_library/: function.h  function.h~  include_function_library.h  print_type.h  scalar_cast_methods.h  scalar_cast_methods.h~  write_all.py
src/comp_library/function_plotting/: include_plotting.h  include_plotting.h~  show_function.h  show_function.h~  show_function.inc
src/comp_library/generic_methods_library/: generic_assert.h  include_generic_methods.h  is_equal_type.h
src/comp_library/linalg/: basic_cublas_functions.cu.h  basic_cublas_functions.h  basic_cuda_functions.cu.h  basic_cuda_functions.h  include_linalg.cu.h  linalg.hpp  linalg_device_types.h
src/comp_library/parallelization_library/: include_parallelization_library.h  parallelization_mpi.h  parallelization_pthreads.h  parallelization_pthreads.h~  parallelization_template.h  parallelization_template.h~  thread_manager_sum.h
src/comp_library/profiler_library/: include_profiling.h  include_profiling.h~  profiler.hpp
src/comp_library/type_list/: type_list.h  type_list.h~  type_list_definitions.h  write_definitions.py
src/config/: CMakeLists.txt  cmake_options.cpp.in
src/distribution/: dist_types.cpp
src/function/: CMakeLists.txt
src/io/: CMakeLists.txt  io_types.cpp  reader.cpp
src/linalg/: CMakeLists.txt
src/math/: CMakeLists.txt
src/math_library/: include_math_library.h  include_math_library.h~  math_library.hpp  static_functions.h  statistical_methods.h  typedefs.hpp
src/parallel/: CMakeLists.txt
src/phys/: CMakeLists.txt  error_computation_type.cpp  four_point_type.cpp
src/phys_library/: domain_types.hpp  vertex_measurement_type.hpp
src/profiling/: CMakeLists.txt
src/util/: CMakeLists.txt  ModernStringUtils.cpp  ModernStringUtils.hpp  get_stdout_from_command.cpp  git_version.cpp.in  modules.cpp.in  signal_handler.cpp  timer.cpp
test/: CMakeLists.txt  cvdlauncher.sh  cvdlauncher_openmpi.sh  cvdlauncher_openmpi_2.sh  cvdlauncher_openmpi_3.sh  cvdlauncher_openmpi_4.sh  dca_gtest_main.cpp  dca_gtest_main_mpi.cpp  jenkins-santis.sh  jenkins.sh  mock_mcconfig.hpp  summit_run_tests.lsf  titan_run_tests.pbs
test/cluster_solver/: CMakeLists.txt  input.qmc_solver_test.json  qmc_solver_test.cpp
test/cluster_solvers/: CMakeLists.txt  ctaux_cpu_test.cpp  ctaux_pthreaded_cpu_test.cpp  ctaux_pthreaded_gpu_test.cpp  ctaux_pthreaded_test.cpp
test/common/: dca_mpi_test_environment.hpp  minimalist_printer.hpp
test/examples/: CMakeLists.txt  advanced_test.cpp  simple_test.cpp  simple_test_mpi.cpp  simple_test_mpi_no_numproc.cpp
test/integration/: CMakeLists.txt  README.md
test/performance/: CMakeLists.txt  README.md
test/system-level/: CMakeLists.txt  README.md
test/unit/: CMakeLists.txt  README.md
(+3801 files in other folders)
